# chatkit

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
demo/: README.md  index.html  server.py
examples/minimal/: index.html
python/: pyproject.toml
python/src/chatkit/: __init__.py  events.py  models.py  protocols.py  sse.py
python/tests/: test_events.py
src/: index.ts  register.ts
src/components/ck-app/: ck-app.ts
src/components/ck-artifact/: ck-artifact.ts
src/components/ck-input/: ck-input.ts
src/components/ck-message/: ck-message.ts
src/components/ck-messages/: ck-messages.ts
src/components/ck-sidebar/: ck-sidebar.ts
src/components/ck-tool-card/: ck-tool-card.ts
src/lib/: ck-base.ts  stream-state.ts
src/sse/: event-types.ts  sse-client.ts  sse-parser.ts
src/theme/: chatkit.css  shared-styles.ts
tests/: sse-parser.test.ts  stream-state.test.ts
