[project]
name = "chatkit"
version = "0.1.0"
description = "Python helpers for chatkit SSE protocol — event types, Pydantic models, and FastAPI utilities"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
fastapi = ["sse-starlette>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatkit"]
